color minior fix

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     stroke: '#fff'
                 },
                 click: function(d, path) {
-                    path.attr('fill', 'red').animate({ fill: '#bcd' }, 1000);
+                    path.attr('fill', 'red').animate({ fill: '#9ab' }, 1000);
                     alert('you clicked on '+d.name);
                 }
             });
